--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectsTreePanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectsTreePanel.mxml
@@ -145,7 +145,6 @@
 					
 					invalidateProperties();
 				}
-
 			}
 			
 			override public function  validateProperties():void
@@ -171,13 +170,19 @@
 			{
 				super.validateDisplayList();
 				
-				if ( _needValideteDisplayList )
-				{
-					_needValideteDisplayList = false;
+				if ( !_needValideteDisplayList )
+					return
 					
-					if (objectsTree.selectedIndex != -1 )
-						objectsTree.scrollToIndex( objectsTree.selectedIndex );
-				}
+				_needValideteDisplayList = false;
+					
+				if (objectsTree.selectedIndex == -1 )
+					return
+				
+				var indexTo : int =  objectsTree.selectedIndex;
+				if ( indexTo > 3 )
+					indexTo -= 3;
+					
+				objectsTree.scrollToIndex( indexTo );
 			}
 
 			private function openTree( item : Object ) : void
@@ -188,7 +193,6 @@
 				{
 					openTree( parentItem );
 					objectsTree.expandItem( parentItem, true, false );
-					//objectsTree.validateNow();
 				}
 			}
 
