Select page page from ObjectTreePanel
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6795 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectsTreePanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectsTreePanel.mxml
@@ -176,13 +176,18 @@
 				_needValideteDisplayList = false;
 					
 				if (objectsTree.selectedIndex == -1 )
-					return
+					return;
 				
-				var indexTo : int =  objectsTree.selectedIndex;
-				if ( indexTo > 3 )
-					indexTo -= 3;
-					
-				objectsTree.scrollToIndex( indexTo );
+				var index : int =  objectsTree.selectedIndex;
+				var newVPos:int;
+
+				if (index >= objectsTree.verticalScrollPosition + objectsTree.rowCount 
+					|| index < objectsTree.verticalScrollPosition)
+				{
+					newVPos = Math.min((index - 2), objectsTree.maxVerticalScrollPosition);
+					trace( index +" || "+ objectsTree.maxVerticalScrollPosition + " = " +  newVPos);
+					objectsTree.verticalScrollPosition = newVPos ;
+				}
 			}
 
 			private function openTree( item : Object ) : void
@@ -218,10 +223,10 @@
 
 			private function objectsTree_changeHandler( event : ListEvent ) : void
 			{
-				var otpe : ObjectsTreePanelEvent = new ObjectsTreePanelEvent( ObjectsTreePanelEvent.OPEN );
+//				var otpe : ObjectsTreePanelEvent = new ObjectsTreePanelEvent( ObjectsTreePanelEvent.OPEN );
 				
-				otpe.pageID = selectedPageID;
-				otpe.objectID = selectedObjectID;
+//				otpe.pageID = selectedPageID;
+//				otpe.objectID = selectedObjectID;
 				
 				dispatchEvent( new ObjectsTreePanelEvent( ObjectsTreePanelEvent.CHANGE ) );
 			}
