--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectsTreePanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectsTreePanel.mxml
@@ -102,7 +102,7 @@
 
 				if ( !_pages )
 					return;
-
+//				trace("1");
 				try
 				{
 					currentID = objectsTree.selectedItem.@id;
@@ -110,10 +110,13 @@
 				catch ( error : Error )
 				{
 				}
+				
+//				trace("2");
 
 				if ( !value )
 					objectsTree.selectedIndex = -1;
-				else if ( value != currentID )
+				else 
+//					if ( value != currentID )
 					setSelectionByID( value );
 			}
 
@@ -127,6 +130,7 @@
 			private var _needUpdateProperties : Boolean = false;
 			private function setSelectionByID( id : String ) : void
 			{
+//				trace("3");
 				try
 				{
 					elementForSelection = _pages.( @id == id )[ 0 ];
@@ -141,6 +145,7 @@
 
 				if ( elementForSelection )
 				{
+//					trace("4");
 					_needUpdateProperties = true;
 					
 					invalidateProperties();
@@ -153,6 +158,7 @@
 				
 				if ( _needUpdateProperties )
 				{
+//					trace("5");
 					_needUpdateProperties 		= false;
 					_needValideteDisplayList 	= true;
 					
@@ -165,27 +171,32 @@
 				
 			}
 			
+			
 			private var _needValideteDisplayList : Boolean = false;
 			override public function  validateDisplayList():void
 			{
+				// scrolling to necessary position
 				super.validateDisplayList();
 				
 				if ( !_needValideteDisplayList )
 					return
 					
 				_needValideteDisplayList = false;
-					
+				
+//				trace("6");
 				if (objectsTree.selectedIndex == -1 )
 					return;
 				
 				var index : int =  objectsTree.selectedIndex;
 				var newVPos:int;
-
+				
+				// claculate new index scroll to
 				if (index >= objectsTree.verticalScrollPosition + objectsTree.rowCount 
 					|| index < objectsTree.verticalScrollPosition)
 				{
 					newVPos = Math.min((index - 2), objectsTree.maxVerticalScrollPosition);
-					trace( index +" || "+ objectsTree.maxVerticalScrollPosition + " = " +  newVPos);
+
+//					trace("7");
 					objectsTree.verticalScrollPosition = newVPos ;
 				}
 			}
