--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
@@ -74,7 +74,8 @@
 					else 
 						smoothImage.source = typesIcons.blank_Icon;
 					
-				}*/	 			
+				}*/	 
+				smoothImage.source = resourceVO.icon;
 			}
 
 			private var imageSourceLoader:Loader;
