--- a/IDE/v.02/core/src/VdomIDE.mxml
+++ b/IDE/v.02/core/src/VdomIDE.mxml
@@ -13,6 +13,9 @@
 	<fx:Script>
 		<![CDATA[
 			// -source-path=locale\{locale} -locale en_US fr_FR ru_RU -link-report=report.xml
+//			-source-path=locale\{locale} -locale en_US fr_FR ru_RU  -load-externs=report.xml
+//			${DOCUMENTS}\Core\src\modules\ApplicationsManagment
+			
 			import mx.containers.Accordion;
 			import mx.events.FlexEvent;
 
