Selected Copy, fixed error
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6813 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/RichTextToolbar.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/RichTextToolbar.mxml
@@ -195,6 +195,7 @@
 				bodyTag.innerText = value;
 				HTMLEditorLoader = null;
 				UIComponent( item ).setFocus();
+			//	item.needRefresh = true;
 //				editableHTML.editabledText = value;
 
 //				selectedItem.editableAttributes[ 0 ].attributes[ "value" ] = value;
