resize WYSIWYG redactor window (maximized)
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6833 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -20,6 +20,7 @@
 	<mx:Script>
 	<![CDATA[
 		import flash.text.engine.EastAsianJustifier;
+		import flash.utils.setTimeout;
 		
 		import mx.collections.XMLListCollection;
 		import mx.controls.Alert;
