--- a/Help/Editor/v.01/src/HTML_WYSIWYG.mxml
+++ b/Help/Editor/v.01/src/HTML_WYSIWYG.mxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:HTML xmlns:mx="http://www.adobe.com/2006/mxml" 
-	location="libs/ckeditor/_samples/fullpage.html" 
-	creationComplete="init()" width="100%" height="100%">
+	location="libs/ckeditor/_samples/fullpage.html"
+	creationComplete="init()" width="100%" height="100%"
+	htmlDOMInitialize="html1_htmlDOMInitializeHandler(event)">
 	<mx:Script>
 		<![CDATA[
-			import mx.events.ResizeEvent;
+			private var instancesInitialized : Boolean;
 			
 			private function init():void
 			{
@@ -12,19 +13,46 @@
 			
 			public function setHTML( value : String ) : void
 			{
+				if (!instancesInitialized) {
+					return;
+				}
 				domWindow.CKEDITOR.instances.editor1.setData(value);
 			}
 			
 			public function getHTML(  ) : String
 			{
-				var xml : XML = new  XML( domWindow.CKEDITOR.instances.editor1.getData()) ;
+				var editorData	: String;
+				var pattern		: RegExp;
+				var metaTeg		: String;
 				
-				return xml;
+				metaTeg = "<meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\" />";
+				pattern = /<[ ]*head[ ]*(>|\/[ ]*>)/i;
+				
+				editorData = instancesInitialized ? domWindow.CKEDITOR.instances.editor1.getData() : "";
+				
+				if (editorData.search(pattern) >= 0 ) 
+				{
+					var firstIndexAfterPattern:Number = editorData.search(pattern) + editorData.match(pattern)[0].length;
+					
+					editorData = editorData.substring(0, firstIndexAfterPattern) + 
+						metaTeg + 
+						editorData.substr(firstIndexAfterPattern);
+				}
+				
+				return editorData;
 			}
+			
 			
 			private function zzzzzz( ddd : *, aaa : *, sss : *  ) : void
 			{
 				//dispatchEvent( new Event("onSave") );
+			}
+		
+			
+			protected function html1_htmlDOMInitializeHandler(event:Event):void
+			{
+				// TODO Auto-generated method stub
+				instancesInitialized = true;
 			}
 			
 		]]>
